[Feat] create npy server

--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.51.11",
+    "@tanstack/react-query-devtools": "^5.51.11",
+    "axios": "^1.7.2",
     "lodash": "^4.17.21",
+    "npyjs": "^0.6.0",
+    "onnxruntime-web": "^1.18.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-router-dom": "^6.25.1",
