--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "yarn install:client && yarn install:server && yarn start:dev",
+    "start": "yarn && yarn install:client && yarn install:server && yarn start:dev",
     "start:dev": "concurrently \"yarn start:client\" \"yarn start:server\"",
     "install:client": "cd client && yarn",
     "install:server": "cd server && yarn",
